# metrik

./: .gitignore  .npmrc  ACCEPTANCE.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.mjs
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GLASS-HANDOFF.md  MACOS-HANDOFF.md
docs/superpowers/plans/: 2026-07-16-strip-mode.md
docs/superpowers/specs/: 2026-07-14-macos-native-design.md  2026-07-16-strip-mode-design.md  2026-07-16-ui-scale-and-dpi-hardening-design.md
scripts/: update-pricing.mjs
src/: App.jsx  UsagePlot.jsx  main.jsx  platformDetection.js  platformDetection.test.js  styles.css  usageClient.js  windowClient.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: app_server.rs  claude_hook.rs  claude_oauth.rs  coding_quota.rs  domain.rs  engine.rs  lib.rs  macos.rs  main.rs  pricing.rs  pricing_table.rs  schema.rs  storage.rs  sync.rs
src-tauri/src/adapters/: antigravity.rs  claude.rs  codex.rs  kimi.rs  mod.rs  opencode.rs  workbuddy.rs  zcode.rs
src/assets/: ATTRIBUTION.md
tools/: make_tray_icon.py
