[package]
name = "metrik"
version = "0.3.0"
description = "Local-first AI agent usage monitor"
authors = ["Metrik contributors"]
edition = "2021"

[lib]
name = "metrik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
ureq = "2"
walkdir = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "System",
  "UI_Composition",
  "UI_Composition_Desktop",
  "Win32_Foundation",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Composition",
  "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
