[package]
name = "metrik"
version = "0.9.0"
description = "Local-first AI agent usage monitor"
authors = ["Metrik contributors"]
edition = "2021"

[lib]
name = "metrik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rusqlite = { version = "0.38", features = ["bundled"] }
# 明确只用 ring provider：默认同时启用 ring 与 aws-lc-rs 时，rustls 0.23
# 无法自动确定 CryptoProvider 会 panic（antigravity 自签 TLS 首次真机命中）。
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
ureq = "2"
walkdir = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# 菜单栏面板：把 main 窗口换成不抢焦点的 NSPanel。crates.io 上没有 Tauri 2 版本，
# 只能走 git 分支；上游停更时需要自行维护。
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "System",
  "UI_Composition",
  "UI_Composition_Desktop",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Composition",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
